add energy_trade_data to DWH

--- a/DL_DWH_energy_trade_data.ipynb
+++ b/DL_DWH_energy_trade_data.ipynb
@@ -25,12 +25,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
     "import requests\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "from datetime import date, datetime, timedelta\n",
     "import psycopg2\n",
+    "from psycopg2.extras import execute_values\n",
     "import boto3\n",
-    "import os\n",
-    "from datetime import datetime"
+    "import os"
    ]
   },
   {
@@ -40,12 +42,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ENDPOINT = os.environ['ENDPOINT']\n",
-    "DB_NAME = os.environ['DB_NAME']\n",
-    "USERNAME = os.environ['USERNAME']\n",
-    "PASSWORD = os.environ['PASSWORD']\n",
-    "S3_BUCKET = os.environ['S3_BUCKET'] \n",
-    "API_KEY = os.environ['API_KEY']"
+    "# Load environment variables\n",
+    "DB_CONFIG_DATALAKE = {\n",
+    "    \"host\": os.getenv(\"var_host\"),\n",
+    "    \"port\": os.getenv(\"var_port\"),\n",
+    "    \"database\": os.getenv(\"var_database\"),\n",
+    "    \"user\": os.getenv(\"var_user\"),\n",
+    "    \"password\": os.getenv(\"var_password\")\n",
+    "}\n",
+    "\n",
+    "DB_CONFIG_DWH = {\n",
+    "    \"host\": os.getenv(\"var_host2\"),\n",
+    "    \"port\": os.getenv(\"var_port\"),\n",
+    "    \"database\": os.getenv(\"var_database2\"),\n",
+    "    \"user\": os.getenv(\"var_user\"),\n",
+    "    \"password\": os.getenv(\"var_password2\")\n",
+    "}"
    ]
   },
   {
@@ -55,241 +67,171 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fetch_currency_data(source_currency=\"CHF\", target_currencies=\"EUR\"):\n",
-    "    \"\"\"Fetch live exchange rates with customizable source and target currencies\"\"\"\n",
-    "    if not API_KEY:\n",
-    "        return {\"error\": \"API key not found\"}\n",
-    "\n",
-    "    base_url = \"https://api.apilayer.com/currency_data/\"\n",
-    "    endpoint = \"live\"\n",
-    "    api_url = f\"{base_url}{endpoint}?source={source_currency}&currencies={target_currencies}\"\n",
-    "    headers = {\"apikey\": API_KEY}\n",
-    "\n",
-    "    response = requests.get(api_url, headers=headers)\n",
-    "    return response.json() if response.status_code == 200 else {\"error\": response.text}\n",
-    "\n",
-    "def store_currency_data_in_rds(currency_data):\n",
-    "    \"\"\"Store live exchange rates in RDS\"\"\"\n",
-    "    try:\n",
-    "        print(\"Connecting to DB...\")\n",
-    "        conn = psycopg2.connect(\n",
-    "            host=ENDPOINT,\n",
-    "            dbname=DB_NAME,\n",
-    "            user=USERNAME,\n",
-    "            password=PASSWORD\n",
-    "        )\n",
-    "        cur = conn.cursor()\n",
-    "        conn.set_session(autocommit=True)\n",
-    "        print(\"DB connection successful.\")\n",
-    "\n",
-    "        # Define the table schema and columns\n",
-    "        table_name = \"currency_data\"\n",
-    "        columns = {\n",
-    "            \"timestamp\": \"TIMESTAMP NOT NULL\",\n",
-    "            \"source_currency\": \"VARCHAR(10)\",\n",
-    "            \"target_currency\": \"VARCHAR(10)\",\n",
-    "            \"exchange_rate\": \"FLOAT\"\n",
-    "        }\n",
-    "\n",
-    "        # Create table dynamically if it doesn't exist\n",
-    "        create_table_query = f\"CREATE TABLE IF NOT EXISTS {table_name} (\"\n",
-    "        create_table_query += \", \".join([f\"{col} {datatype}\" for col, datatype in columns.items()])\n",
-    "        create_table_query += \", PRIMARY KEY (timestamp, source_currency, target_currency));\"\n",
-    "\n",
-    "        cur.execute(create_table_query)\n",
-    "\n",
-    "        insert_query = f\"\"\"\n",
-    "        INSERT INTO {table_name} ({', '.join(columns.keys())})\n",
-    "        VALUES (%s, %s, %s, %s)\n",
-    "        ON CONFLICT (timestamp, source_currency, target_currency) DO NOTHING;\n",
-    "        \"\"\"\n",
-    "\n",
-    "        now = datetime.now().strftime('%Y-%m-%d %H:%M:%S.%f')[:-3]  # Format to 'YYYY-MM-DD HH:MM:SS.mmm'\n",
-    "\n",
-    "        for pair, rate in currency_data.get(\"quotes\", {}).items():\n",
-    "            source_currency, target_currency = pair[:3], pair[3:]\n",
-    "            cur.execute(\n",
-    "                insert_query,\n",
-    "                (now, source_currency, target_currency, rate)\n",
-    "            )\n",
-    "\n",
-    "        cur.close()\n",
-    "        conn.close()\n",
-    "\n",
-    "    except psycopg2.Error as e:\n",
-    "        print(\"Database error:\", e)\n",
-    "\n",
-    "def convert_unix_to_iso(timestamp):\n",
-    "    \"\"\"Convert Unix timestamp to ISO 8601 format\"\"\"\n",
-    "    return datetime.utcfromtimestamp(timestamp).isoformat()\n",
-    "\n",
-    "def preprocess_currency_data(data):\n",
-    "    \"\"\"Fix timestamps in the currency data JSON\"\"\"\n",
-    "    if \"timestamp\" in data:\n",
-    "        data[\"timestamp\"] = convert_unix_to_iso(data[\"timestamp\"])\n",
-    "    return data\n",
-    "\n",
-    "def store_json_to_s3(currency_data):\n",
-    "    \"\"\"Store the JSON data to S3 bucket in a structured way\"\"\"\n",
-    "    s3 = boto3.client('s3')\n",
-    "    today = str(datetime.today().date())\n",
-    "    foldername = \"currency_data\"\n",
-    "    key = f\"{foldername}/{foldername}_{today}.json\"\n",
-    "\n",
-    "    processed_data = preprocess_currency_data(currency_data)\n",
-    "\n",
-    "    s3.put_object(\n",
-    "        Bucket=S3_BUCKET,\n",
-    "        Key=key,\n",
-    "        Body=json.dumps(processed_data, indent=2),\n",
-    "        ContentType='application/json'\n",
-    "    )\n",
-    "\n",
     "def lambda_handler(event, context):\n",
-    "    \"\"\"AWS Lambda Entry Point\"\"\"\n",
-    "    \n",
-    "    # Fetch live data\n",
-    "    currency_data = fetch_currency_data()\n",
-    "    \n",
-    "    if \"error\" in currency_data:\n",
-    "        return {\n",
-    "            \"statusCode\": 400,\n",
-    "            \"body\": json.dumps({\"error\": currency_data[\"error\"]}, indent=2)\n",
-    "        }\n",
-    "    \n",
-    "    store_currency_data_in_rds(currency_data)\n",
-    "    store_json_to_s3(currency_data)\n",
-    "\n",
-    "    return {\n",
-    "        \"statusCode\": 200,\n",
-    "        \"body\": json.dumps({\n",
-    "            \"message\": \"Live exchange rates stored successfully in RDS and S3.\",\n",
-    "            \"s3_path\": f\"s3://{S3_BUCKET}/currency_data/currency_rates_{datetime.today().strftime('%Y-%m-%d')}.json\",\n",
-    "            \"currency_rates\": currency_data\n",
-    "        }, indent=2)\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aa91c2a2",
-   "metadata": {},
-   "source": [
-    "## Historical data extraction:\n",
-    "\n",
-    "Lambda Layer: group2_historical_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bdd67dc0",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def fetch_historical_currency_data(start_date=\"2024-04-25\", end_date=\"2025-04-25\", source_currency=\"CHF\", target_currencies=\"EUR\"):\n",
-    "    \"\"\"Fetch historical exchange rates between start_date and end_date\"\"\"\n",
-    "    if not API_KEY:\n",
-    "        return {\"error\": \"API key not found\"}\n",
-    "\n",
-    "    base_url = \"https://api.apilayer.com/currency_data/timeframe\"\n",
-    "    params = f\"?start_date={start_date}&end_date={end_date}&source={source_currency}&currencies={target_currencies}\"\n",
-    "    url = base_url + params\n",
-    "    headers = {\"apikey\": API_KEY}\n",
-    "\n",
-    "    response = requests.get(url, headers=headers)\n",
-    "    return response.json() if response.status_code == 200 else {\"error\": response.text}\n",
-    "\n",
-    "def store_historical_currency_data_in_rds(currency_data):\n",
-    "    \"\"\"Store historical exchange rates in RDS\"\"\"\n",
     "    try:\n",
-    "        print(\"Connecting to DB...\")\n",
-    "        conn = psycopg2.connect(\n",
-    "            host=ENDPOINT,\n",
-    "            dbname=DB_NAME,\n",
-    "            user=USERNAME,\n",
-    "            password=PASSWORD\n",
-    "        )\n",
-    "        cur = conn.cursor()\n",
-    "        conn.set_session(autocommit=True)\n",
-    "        print(\"DB connection successful.\")\n",
+    "        # Setup date window (2 days ago)\n",
+    "        trade_day = date.today() - timedelta(days=2)\n",
+    "        print(f'trade_day: {trade_day}')\n",
+    "        start_time = datetime.combine(trade_day, datetime.min.time())\n",
+    "        print(f'start_time: {start_time}')\n",
+    "        end_time = start_time + timedelta(days=1)\n",
+    "        print(f'end_time: {end_time}')\n",
     "\n",
-    "        table_name = \"tbl_currency_data\"\n",
-    "        columns = {\n",
-    "            \"timestamp\": \"TIMESTAMP NOT NULL\",\n",
-    "            \"source_currency\": \"VARCHAR(10)\",\n",
-    "            \"target_currency\": \"VARCHAR(10)\",\n",
-    "            \"exchange_rate\": \"FLOAT\"\n",
-    "        }\n",
+    "        # Connect to source and target databases\n",
+    "        conn_src = psycopg2.connect(**DB_CONFIG_DATALAKE)\n",
+    "        conn_tgt = psycopg2.connect(**DB_CONFIG_DWH)\n",
+    "        cur_tgt = conn_tgt.cursor()\n",
     "\n",
-    "        # Create table if not exists\n",
-    "        create_table_query = f\"CREATE TABLE IF NOT EXISTS {table_name} (\"\n",
-    "        create_table_query += \", \".join([f\"{col} {datatype}\" for col, datatype in columns.items()])\n",
-    "        create_table_query += \", PRIMARY KEY (timestamp, source_currency, target_currency));\"\n",
-    "        cur.execute(create_table_query)\n",
+    "        # Ensure fact_energy_trade table exists\n",
+    "        cur_tgt.execute(\"\"\"\n",
+    "        CREATE TABLE IF NOT EXISTS fact_energy_trade (\n",
+    "            trade_id BIGINT PRIMARY KEY,\n",
+    "            time_id INT,\n",
+    "            location_id INT,\n",
+    "            neighbor_country_id INT,\n",
+    "            direction TEXT,\n",
+    "            energy_value_gw FLOAT,\n",
+    "            exchange_rate FLOAT,\n",
+    "            value_chf FLOAT\n",
+    "        );\n",
+    "        \"\"\")\n",
+    "        conn_tgt.commit()\n",
     "\n",
-    "        insert_query = f\"\"\"\n",
-    "        INSERT INTO {table_name} ({', '.join(columns.keys())})\n",
-    "        VALUES (%s, %s, %s, %s)\n",
-    "        ON CONFLICT (timestamp, source_currency, target_currency) DO NOTHING;\n",
+    "        # 1) Load and aggregate hourly energy CBET data\n",
+    "        sql_energy = \"\"\"\n",
+    "        SELECT\n",
+    "        date_trunc('hour', timestamp) AS hour,\n",
+    "        country,\n",
+    "        SUM(value) AS energy_sum_gw\n",
+    "        FROM tbl_energy_cbet_data\n",
+    "        GROUP BY 1,2\n",
+    "        ORDER BY 1,2;\n",
     "        \"\"\"\n",
+    "        df_energy = pd.read_sql_query(sql_energy, conn_src)\n",
+    "        # drop aggregate \"sum\" rows that aren’t actual countries\n",
+    "        df_energy = df_energy[df_energy['country'].str.strip().str.lower() != 'sum']\n",
     "\n",
-    "        for date_str, rates in currency_data.get(\"quotes\", {}).items():\n",
-    "            for pair, rate in rates.items():\n",
-    "                source_currency, target_currency = pair[:3], pair[3:]\n",
-    "                timestamp = datetime.strptime(date_str, \"%Y-%m-%d\")\n",
-    "                cur.execute(\n",
-    "                    insert_query,\n",
-    "                    (timestamp, source_currency, target_currency, rate)\n",
-    "                )\n",
+    "        # 2) Load daily currency rates\n",
+    "        sql_currency = \"\"\"\n",
+    "        SELECT\n",
+    "        DATE(timestamp) AS rate_date,\n",
+    "        exchange_rate\n",
+    "        FROM tbl_currency_data\n",
+    "        WHERE source_currency='CHF' AND target_currency='EUR'\n",
+    "        ;\n",
+    "        \"\"\"\n",
+    "        df_curr = pd.read_sql_query(sql_currency, conn_src)\n",
+    "        # ensure one rate per day to avoid duplicate merges\n",
+    "        df_curr = df_curr.drop_duplicates(subset=['rate_date'])\n",
     "\n",
-    "        cur.close()\n",
-    "        conn.close()\n",
+    "        # 3) Prepare energy dataframe\n",
+    "        df_energy['direction'] = df_energy['energy_sum_gw'].apply(\n",
+    "            lambda x: 'import' if x>0 else ('export' if x<0 else 'none')\n",
+    "        )\n",
+    "        df_energy['energy_value_gw'] = df_energy['energy_sum_gw'].abs()\n",
+    "        df_energy['rate_date'] = pd.to_datetime(df_energy['hour']).dt.date\n",
     "\n",
-    "    except psycopg2.Error as e:\n",
-    "        print(\"Database error:\", e)\n",
+    "        # merge exchange rate\n",
+    "        df_energy = df_energy.merge(\n",
+    "            df_curr,\n",
+    "            left_on='rate_date', right_on='rate_date',\n",
+    "            how='left'\n",
+    "        )\n",
     "\n",
-    "def store_json_to_s3(currency_data, start_date, end_date):\n",
-    "    \"\"\"Store the JSON data to S3 bucket in the same folder as live data\"\"\"\n",
-    "    s3 = boto3.client('s3')\n",
-    "    foldername = \"currency_data\"\n",
-    "    key = f\"{foldername}/currency_data_{start_date}_to_{end_date}.json\"\n",
+    "        # 4) Map foreign keys\n",
+    "        # location_id always Switzerland = 6\n",
+    "        df_energy['location_id'] = 6\n",
     "\n",
-    "    s3.put_object(\n",
-    "        Bucket=S3_BUCKET,\n",
-    "        Key=key,\n",
-    "        Body=json.dumps(currency_data, indent=2),\n",
-    "        ContentType='application/json'\n",
-    "    )\n",
+    "        # Fetch dim_countries for neighbor_country_id\n",
+    "        sql_country = \"SELECT country_id, country_name_en FROM dim_countries;\"\n",
+    "        df_country = pd.read_sql_query(sql_country, conn_tgt)\n",
+    "        df_energy = df_energy.merge(\n",
+    "            df_country,\n",
+    "            left_on='country', right_on='country_name_en',\n",
+    "            how='left'\n",
+    "        )\n",
+    "        df_energy.rename(columns={'country_id':'neighbor_country_id'}, inplace=True)\n",
     "\n",
-    "def lambda_handler(event, context):\n",
-    "    \"\"\"AWS Lambda Entry Point for historical data\"\"\"\n",
-    "    start_date = event.get(\"start_date\", \"2024-04-25\")\n",
-    "    end_date = event.get(\"end_date\", \"2025-04-25\")\n",
+    "        # Fetch dim_time for time_id\n",
+    "        sql_time = \"SELECT time_id, timestamp_utc FROM dim_time;\"\n",
+    "        df_time = pd.read_sql_query(sql_time, conn_tgt)\n",
+    "        df_time['timestamp_utc'] = pd.to_datetime(df_time['timestamp_utc'])\n",
     "\n",
-    "    currency_data = fetch_historical_currency_data(start_date=start_date, end_date=end_date)\n",
+    "        df_energy = df_energy.merge(\n",
+    "            df_time,\n",
+    "            left_on='hour', right_on='timestamp_utc',\n",
+    "            how='left'\n",
+    "        )\n",
     "\n",
-    "    if \"error\" in currency_data:\n",
+    "        # 5) Lookup hourly energy prices and calculate value in EUR\n",
+    "        sql_price = \"\"\"\n",
+    "        SELECT\n",
+    "        date_trunc('hour', timestamp) AS hour,\n",
+    "        price\n",
+    "        FROM tbl_energy_price_data;\n",
+    "        \"\"\"\n",
+    "        df_price = pd.read_sql_query(sql_price, conn_src)\n",
+    "        # ensure one price per hour to avoid duplicate merges\n",
+    "        df_price = df_price.drop_duplicates(subset=['hour'])\n",
+    "        df_price['hour'] = pd.to_datetime(df_price['hour']).dt.floor('H')\n",
+    "        df_price.rename(columns={'price':'price_eur_mwh'}, inplace=True)\n",
+    "        \n",
+    "\n",
+    "        # merge hourly prices\n",
+    "        df_energy = df_energy.merge(\n",
+    "            df_price[['hour','price_eur_mwh']],\n",
+    "            on='hour', how='left'\n",
+    "        )\n",
+    "\n",
+    "        # calculate value in EUR: price (EUR/MWh) * 1000 * energy_value_gw / exchange_rate (CHF-EUR)\n",
+    "        df_energy['value_chf'] = (df_energy['price_eur_mwh'] * 1000 * df_energy['energy_value_gw'] / df_energy['exchange_rate'])\n",
+    "        df_energy['value_chf'] = df_energy['value_chf'].round(2)\n",
+    "\n",
+    "        # 6) Generate trade_id starting after current max\n",
+    "        cur_tgt.execute(\"SELECT COALESCE(MAX(trade_id),0) FROM fact_energy_trade;\")\n",
+    "        max_id = cur_tgt.fetchone()[0]\n",
+    "        df_energy = df_energy.sort_values(['hour','neighbor_country_id'])\n",
+    "        df_energy['trade_id'] = range(max_id+1, max_id+1+len(df_energy))\n",
+    "\n",
+    "        # 7) Build insert records\n",
+    "        records = df_energy[['trade_id','time_id','location_id',\n",
+    "                            'neighbor_country_id','direction',\n",
+    "                            'energy_value_gw','exchange_rate','value_chf']].values.tolist()\n",
+    "\n",
+    "            # Batch insert (convert numpy types to native Python types)\n",
+    "        insert_sql = (\"INSERT INTO fact_energy_trade \"\n",
+    "            \"(trade_id, time_id, location_id, neighbor_country_id, direction, energy_value_gw, exchange_rate, value_chf) \"\n",
+    "            \"VALUES %s\"\n",
+    "        )\n",
+    "        # Convert to list of tuples\n",
+    "        records = df_energy[['trade_id','time_id','location_id',\n",
+    "                            'neighbor_country_id','direction',\n",
+    "                            'energy_value_gw','exchange_rate','value_chf']].values.tolist()\n",
+    "        # Ensure each value is a Python scalar\n",
+    "        clean_records = []\n",
+    "        for row in records:\n",
+    "            clean_row = []\n",
+    "            for v in row:\n",
+    "                # numpy types: use item(), else keep\n",
+    "                clean_row.append(v.item() if hasattr(v, 'item') else v)\n",
+    "            clean_records.append(tuple(clean_row))\n",
+    "\n",
+    "        execute_values(cur_tgt, insert_sql, clean_records)\n",
+    "        conn_tgt.commit()\n",
+    "\n",
+    "        # Close connections\n",
+    "        cur_tgt.close()\n",
+    "        conn_src.close()\n",
+    "        conn_tgt.close()\n",
+    "\n",
+    "        return { 'status':'success', 'rows_inserted': len(clean_records) }\n",
+    "\n",
+    "\n",
+    "    except Exception as e:\n",
     "        return {\n",
-    "            \"statusCode\": 400,\n",
-    "            \"body\": json.dumps({\"error\": currency_data[\"error\"]}, indent=2)\n",
-    "        }\n",
-    "\n",
-    "    store_historical_currency_data_in_rds(currency_data)\n",
-    "    store_json_to_s3(currency_data, start_date, end_date)\n",
-    "\n",
-    "    return {\n",
-    "        \"statusCode\": 200,\n",
-    "        \"body\": json.dumps({\n",
-    "            \"message\": \"Historical exchange rates stored successfully in RDS and S3.\",\n",
-    "            \"s3_path\": f\"s3://{S3_BUCKET}/currency_data/currency_data_{start_date}_to_{end_date}.json\",\n",
-    "            \"currency_rates\": currency_data\n",
-    "        }, indent=2)\n",
-    "    }\n"
+    "            'statusCode': 500,\n",
+    "            'body': json.dumps(f'Error: {str(e)}')\n",
+    "        }\n"
    ]
   }
  ],
