--- a/Code_Documentation_20250517.ipynb
+++ b/Code_Documentation_20250517.ipynb
@@ -924,7 +924,7 @@
    "source": [
     "CREATE TABLE public.tbl_energy_cbet_data (\n",
     "\t\"timestamp\" timestamp NULL,\n",
-    "\tcountry float8 NULL,\n",
+    "\tcountry text NULL,\n",
     "\tvalue float8 NULL\n",
     ");"
    ]
