Update vergessener abgleich

--- a/API_Sunhours.ipynb
+++ b/API_Sunhours.ipynb
@@ -168,7 +168,7 @@
     "    return df\n",
     "\n",
     "def lambda_handler():\n",
-    "    df_coords = pd.DataFrame(get_city_data())\n",
+    "    df_coords = get_city_data()\n",
     "    all_sun_data = pd.DataFrame([])\n",
     "\n",
     "    for _, row in df_coords.iterrows():\n",
