Creation of fact_weather & update to UTC

--- a/API_Sunhours.ipynb
+++ b/API_Sunhours.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "1b45b920",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cacfed9f",
    "metadata": {},
    "outputs": [],
@@ -38,11 +38,10 @@
     "bucket_name = os.getenv('BUCKET_NAME')\n",
     "\n",
     "DB_CONFIG2 = {\n",
-    "    \"host\": os.getenv(\"var_host2\"),\n",
-    "    \"port\": os.getenv(\"var_port\"),\n",
-    "    \"database\": os.getenv(\"var_database2\"),\n",
-    "    \"user\": os.getenv(\"USERNAME\"),\n",
-    "    \"password\": os.getenv(\"var_password2\")\n",
+    "    \"host\": os.getenv(\"ENDPOINT_WH\"),\n",
+    "    \"database\": os.getenv(\"DB_NAME_WH\"),\n",
+    "    \"user\": os.getenv(\"USERNAME_WH\"),\n",
+    "    \"password\": os.getenv(\"PASSWORD_WH\")\n",
     "}\n"
    ]
   },
@@ -53,23 +52,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\arbei\\AppData\\Local\\Temp\\ipykernel_2084\\4155392302.py:70: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql_query(query, conn)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "date                          datetime64[ns]\n",
-      "sunrise        datetime64[ns, Europe/Zurich]\n",
-      "sunset         datetime64[ns, Europe/Zurich]\n",
-      "first_light    datetime64[ns, Europe/Zurich]\n",
-      "last_light     datetime64[ns, Europe/Zurich]\n",
-      "dawn           datetime64[ns, Europe/Zurich]\n",
-      "dusk           datetime64[ns, Europe/Zurich]\n",
-      "solar_noon     datetime64[ns, Europe/Zurich]\n",
-      "golden_hour    datetime64[ns, Europe/Zurich]\n",
-      "day_length                   timedelta64[ns]\n",
-      "timezone                              object\n",
-      "utc_offset                             int64\n",
-      "city                                  object\n",
-      "dtype: object\n",
       "Connecting to DB & Bucket...\n",
       "Connection to DB successful.\n",
       "Connection to Bucket successful.\n",
@@ -188,7 +181,7 @@
     "            all_sun_data[\"date\"].dt.strftime(\"%Y-%m-%d\") + \" \" + all_sun_data[col],\n",
     "            format=\"%Y-%m-%d %I:%M:%S %p\"\n",
     "        ).dt.tz_localize(ZoneInfo(\"UTC\"))\n",
-    "        all_sun_data[col] = all_sun_data[col].dt.tz_convert(ZoneInfo(\"Europe/Zurich\"))\n",
+    "        all_sun_data[col] = all_sun_data[col]\n",
     "    all_sun_data[\"day_length\"] = pd.to_timedelta(all_sun_data[\"day_length\"])\n",
     "\n",
     "    try:\n",
@@ -224,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "bff6d1f5",
    "metadata": {},
    "outputs": [
