--- a/Code_Documentation_20250517.ipynb
+++ b/Code_Documentation_20250517.ipynb
@@ -115,8 +115,7 @@
     "    \n",
     "\n",
     "def extract_cbet_data(json_data: dict) -> pd.DataFrame:\n",
-    "    idx = (pd.to_datetime(json_data[\"unix_seconds\"], unit=\"s\", utc=True)\n",
-    "             .tz_convert(\"Europe/Zurich\"))\n",
+    "    idx = pd.to_datetime(json_data[\"unix_seconds\"], unit=\"s\", utc=True)\n",
     "    idx.name = \"timestamp\"\n",
     "\n",
     "    frames = []\n",
@@ -183,12 +182,12 @@
     "    api_df_power = pd.DataFrame(api_response_power[\"production_types\"])\n",
     "    api_df_power_t = pd.DataFrame(api_df_power['data'].tolist()).T\n",
     "    api_df_power_t.columns = api_df_power['name']\n",
-    "    api_df_power_t.index = pd.to_datetime(api_response_power[\"unix_seconds\"], unit='s', utc=True).tz_convert(\"Europe/Zurich\")\n",
+    "    api_df_power_t.index = pd.to_datetime(api_response_power[\"unix_seconds\"], unit='s', utc=True)\n",
     "\n",
     "    api_df_price = pd.DataFrame(api_response_prices[\"price\"])\n",
     "    api_df_price['Unit'] = api_response_prices[\"unit\"]\n",
     "    api_df_price.columns = ['Price', 'Unit']\n",
-    "    api_df_price.index = pd.to_datetime(api_response_prices[\"unix_seconds\"], unit='s', utc=True).tz_convert(\"Europe/Zurich\")\n",
+    "    api_df_price.index = pd.to_datetime(api_response_prices[\"unix_seconds\"], unit='s', utc=True)\n",
     "\n",
     "    api_df_cbet = extract_cbet_data(cbet_json)\n",
     "\n",
