--- a/API-import.ipynb
+++ b/API-import.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "id": "745bff8c",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "id": "8b99a536",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
        "{'statusCode': 200, 'body': '\"Inport succesfully\"'}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,8 +136,7 @@
     "    \n",
     "\n",
     "def extract_cbet_data(json_data: dict) -> pd.DataFrame:\n",
-    "    idx = (pd.to_datetime(json_data[\"unix_seconds\"], unit=\"s\", utc=True)\n",
-    "             .tz_convert(\"Europe/Zurich\"))\n",
+    "    idx = pd.to_datetime(json_data[\"unix_seconds\"], unit=\"s\", utc=True)\n",
     "    idx.name = \"timestamp\"\n",
     "\n",
     "    frames = []\n",
@@ -204,12 +203,12 @@
     "    api_df_power = pd.DataFrame(api_response_power[\"production_types\"])\n",
     "    api_df_power_t = pd.DataFrame(api_df_power['data'].tolist()).T\n",
     "    api_df_power_t.columns = api_df_power['name']\n",
-    "    api_df_power_t.index = pd.to_datetime(api_response_power[\"unix_seconds\"], unit='s', utc=True).tz_convert(\"Europe/Zurich\")\n",
+    "    api_df_power_t.index = pd.to_datetime(api_response_power[\"unix_seconds\"], unit='s', utc=True)\n",
     "\n",
     "    api_df_price = pd.DataFrame(api_response_prices[\"price\"])\n",
     "    api_df_price['Unit'] = api_response_prices[\"unit\"]\n",
     "    api_df_price.columns = ['Price', 'Unit']\n",
-    "    api_df_price.index = pd.to_datetime(api_response_prices[\"unix_seconds\"], unit='s', utc=True).tz_convert(\"Europe/Zurich\")\n",
+    "    api_df_price.index = pd.to_datetime(api_response_prices[\"unix_seconds\"], unit='s', utc=True)\n",
     "\n",
     "    api_df_cbet = extract_cbet_data(cbet_json)\n",
     "\n",
